using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string isMoving = "IsMoving";
    internal static string isRunning= "IsRunning";
    internal static string isGrounded = "IsGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnWall = "IsOnWall";
    internal static string isOnCeiling="IsOnCeiling";
    internal static string attack = "attack";
    internal static string canMove = "canMove";
}